--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -389,7 +389,9 @@ colors:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 0.90
+# Apparently deprecated, use window.opacity instead
+#background_opacity: 0.90
+window.opacity: 0.90
 
 #selection:
   # This string contains all characters that are used as separators for
